--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/photo"
+            android:id="@+id/photo_iv"
             android:scaleType="fitXY" />
 
         <LinearLayout
@@ -27,17 +27,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/title_txt"
                 android:textColor="@color/text_color"
                 android:textSize="@dimen/title_text_size"
-                android:text="@string/title"
                 android:layout_marginBottom="@dimen/main_screen_side_padding" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/content_txt"
                 android:textColor="@color/text_color"
-                android:textSize="@dimen/menu_text_size"
-                android:text="@string/text" />
+                android:textSize="@dimen/menu_text_size" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
