--- a/app/src/main/res/layout/activity_createpostnext.xml
+++ b/app/src/main/res/layout/activity_createpostnext.xml
@@ -74,6 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
+        android:id="@+id/title_txt"
         android:hint="제목쓰기" />
 
     <TextView
@@ -88,30 +89,36 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:singleLine="false"
+        android:id="@+id/content_txt"
         android:hint="설명쓰기" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_marginBottom="16dp">
 
-        <ImageButton
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_prev"
+            android:text="prev"
+            android:textSize="24sp"
+            android:textStyle="bold"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:onClick="prevButtonClick" />
+            android:onClick="prevClick" />
 
-        <ImageButton
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_next"
+            android:text="next"
+            android:textSize="24sp"
+            android:textStyle="bold"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:onClick="nextButtonClick" />
+            android:onClick="nextClick" />
 
     </RelativeLayout>
 
