--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,7 +42,7 @@
                         android:layout_centerInParent="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/postCount"
+                        android:id="@+id/post_count_txt"
                         android:text="0"
                         android:textSize="16dp"
                         android:textStyle="bold"
@@ -55,7 +55,7 @@
                         android:text="    게시물"
                         android:textSize="16dp"
                         android:textColor="@android:color/darker_gray"
-                        android:layout_below="@+id/postCount"
+                        android:layout_below="@+id/post_count_txt"
                         />
 
                 </RelativeLayout>
@@ -69,7 +69,7 @@
                         android:layout_centerInParent="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/followerCount"
+                        android:id="@+id/follower_count_txt"
                         android:text="0"
                         android:textSize="16dp"
                         android:textStyle="bold"
@@ -82,7 +82,7 @@
                         android:text="    팔로워"
                         android:textSize="16dp"
                         android:textColor="@android:color/darker_gray"
-                        android:layout_below="@+id/followerCount"
+                        android:layout_below="@+id/follower_count_txt"
                         />
 
                 </RelativeLayout>
@@ -96,7 +96,7 @@
                         android:layout_centerInParent="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/followingCount"
+                        android:id="@+id/following_count_txt"
                         android:text="0"
                         android:textSize="16dp"
                         android:textStyle="bold"
@@ -109,7 +109,7 @@
                         android:text="    팔로잉"
                         android:textSize="16dp"
                         android:textColor="@android:color/darker_gray"
-                        android:layout_below="@+id/followingCount"
+                        android:layout_below="@+id/following_count_txt"
                         />
 
                 </RelativeLayout>
@@ -149,7 +149,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Introduce!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+        android:text="소개글.."
         android:textSize="16dp"
         android:textColor="@android:color/black"
         android:layout_below="@+id/txt_user_name"
@@ -157,12 +157,12 @@
         android:layout_marginTop="8dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/textView" />
+        android:id="@+id/introduce_txt" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/introduce_txt"
         android:layout_marginTop="16dp"
         android:fillViewport="true"
         android:layout_alignParentLeft="true"
