--- a/app/src/main/res/menu/menu_tabbar.xml
+++ b/app/src/main/res/menu/menu_tabbar.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home_item"
-        android:icon="@drawable/ic_update_white_24dp"
+        android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
         android:id="@+id/hash_item"
-        android:icon="@drawable/ic_location_on_white_24dp"
+        android:icon="@drawable/ic_hash"
         android:title="Hash" />
     <item
         android:id="@+id/profile_item"
-        android:icon="@drawable/ic_favorite_white_24dp"
+        android:icon="@drawable/ic_profile"
         android:title="Profile" />
 </menu>
